--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./main.js"></script>
 </head>
 <body>
+    <h1>AGE CALCULATOR</h1>
 <div class="container">
 <div class="input-wrapper">
     <input type="date" id="birth-date">
@@ -18,7 +19,7 @@
 <div class="year">
     <span id="years">-</span>
     <p>Years</p>
-</div>
+</div>  
 <div class="month">
     <span id="months">-</span>
     <p>Month's</p>
